# roze

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  core_demo.java  debug_tokens.roze  debug_tokens.rs  math.java  math.roze  test_clean.java  test_clean.roze  test_phase1.java  test_phase1.roze  test_simple.roze
.github/workflows/: build.yml  release.yml  test.yml
compiler/: Cargo.toml
compiler/src/: error.rs  imports.rs  lib.rs  main.rs
compiler/src/codegen/: jvm.rs  mod.rs
compiler/src/lexer/: ast.rs  mod.rs  token.rs
compiler/src/parser/: ast.rs  mod.rs
compiler/src/semantic/: mod.rs
compiler/tests/: golden.rs
compiler/tests/fixtures/: control_flow.roze  core_intrinsics.roze  for_loop.roze  hello.roze  import_core.roze  string_equality.roze
examples/: ai.roze  core_demo.roze  game.roze  hacking.roze  hello.roze  webserver.roze
ide/vscode/: language-configuration.json  package.json
ide/vscode/snippets/: roze.code-snippets
ide/vscode/src/: extension.ts
ide/vscode/syntaxes/: roze.tmLanguage.json
runtime/: Cargo.toml
runtime/src/: gc.rs  lib.rs  memory.rs  threading.rs
stdlib/: Cargo.toml
stdlib/src/: collections.rs  core.roze  core.rs  io.roze  io.rs  lib.rs
test_project/: README.md  build.roze.toml  main.java  roze.toml
test_project/src/: main.roze
tests/: test_runner.roze
tools/roze-build/: Cargo.toml
tools/roze-build/src/: build.rs  config.rs  main.rs  watcher.rs
tools/roze-lsp/: Cargo.toml
tools/roze-lsp/src/: analyzer.rs  diagnostics.rs  main.rs  parser.rs
tools/roze-pkg/: Cargo.toml
tools/roze-pkg/src/: dependency.rs  main.rs  project.rs  template.rs
