[workspace]
members = [
    "compiler",
    "runtime",
    "stdlib",
    "tools/roze-build",
    "tools/roze-pkg",
    "tools/roze-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Firoze"]
license = "MIT"
repository = "https://github.com/firoze/roze"

[workspace.dependencies]
anyhow = "1.0"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"