[package]
name = "roze-build"
version = "0.1.0"
edition = "2021"
description = "Build system for Roze programming language"

[[bin]]
name = "roze-build"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
glob = "0.3"
notify = "6.1"
crossbeam = "0.8"
which = "6.0"