[package]
name = "roze-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Roze"

[[bin]]
name = "roze-lsp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
dashmap = "6.1"
ropey = "1.6"
log = "0.4"
env_logger = "0.11"
which = "6.0"