[package]
name = "roze-pkg"
version = "0.1.0"
edition = "2021"
description = "Package manager for Roze programming language"

[[bin]]
name = "roze-pkg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
fs_extra = "1.3"
walkdir = "2.5"
tempfile = "3.0"
which = "6.0"